# Bitradio

./: azure-pipelines.yml  configure.ac
.github/workflows/: mac.yml  windows.yml
doc/: build-osx-on-windows.md
src/: clientversion.h
src/qt/locale/: bitradio_de.ts  bitradio_es.ts  bitradio_fr.ts  bitradio_fr_FR.ts  bitradio_it.ts  bitradio_ru.ts
src/qt/res/css/: default.css
